cabal-version:  1.12
name:           oplss2019
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/oplss2019#readme>
homepage:       https://github.com/githubuser/oplss2019#readme
bug-reports:    https://github.com/githubuser/oplss2019/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2019 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/oplss2019

library
  exposed-modules:
      Bus
      Distr
      DistrLog
      MHMonad
      MHMonadLog
  other-modules:
      Paths_oplss2019
  hs-source-dirs:
      src
  build-depends:
      ad
    , backprop
    , Chart
    , Chart-diagrams
    , base >=4.7 && <5
    , bytestring
    , cassava
    , colour
    , data-default-class
    , filepath
    , gamma
    , lazyio
    , lens
    , log-domain
    , monad-extras
    , mtl
    , random
    , statistics
    , transformers
    , vector
  default-language: Haskell2010
